[gd_scene load_steps=3 format=3 uid="uid://cjb5w1yp1p5w2"]

[ext_resource type="Texture2D" uid="uid://b6xqe6h7gwh1f" path="res://assets/sprites/sheets/RoboFighter/RoboCharacterSelect.png" id="1_eejbj"]
[ext_resource type="Script" path="res://characters/RoboFighter/uiScripts/robot_select_button.gd" id="2_vok2k"]

[node name="Character Button" type="TextureRect"]
custom_minimum_size = Vector2(120, 80)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1160.0
offset_bottom = -640.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_eejbj")
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_vok2k")

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.556863, 1, 0.403922)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Robot"
horizontal_alignment = 1
uppercase = true

[node name="Button Control" type="Control" parent="."]
custom_minimum_size = Vector2(120, 80)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Button Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Button Control/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button Control/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button Control/Button" to="." method="_on_button_pressed"]
